Refresh Swagger API documentation
